[package]
name = "ioslice"
version = "0.6.0-alpha.2"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "no_std I/O slices that are still optionally ABI compatible with std and lbc"
documentation = "https://docs.rs/ioslice"
readme = "README.md"
repository = "https://github.com/4lDO2/ioslice-rs"
license = "MIT"
keywords = ["os", "iovec", "vectored-io"]
categories = ["api-bindings", "no-std", "os::unix-apis", "os::windows-apis", "os"]
exclude = ["target"]

[features]
default = ["std", "io_box"]
std = ["libc", "winapi", "alloc"]
alloc = []
io_box = ["alloc"]
nightly = []

[dependencies]
stable_deref_trait = { version = "1.2", optional = true }

# [target.'cfg(target_os = "redox")'.dependencies]
# redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "incompat-io_uring-fix", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = ["ntdef", "ws2def"] }

[dev-dependencies]
libc = "0.2"
# uninit-tools = { version = "0.1", features = ["ioslice-iobox"] }

[badges]
travis-ci = { repository = "4lDO2/ioslice-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "4lDO2/ioslice-rs" }
is-it-maintained-open-issues = { repository = "4lDO2/ioslice-rs" }
